<resources>
    <string name="app_name">Nomer</string>
    <string name="logoText">NOMER</string>
    <!-- App -->
    <string name="checkConnection">No internet connection</string>
    <string name="serverError">Connection error</string>

    <!--Fonts-->
    <string name="robotoMedium">Roboto-Medium.ttf</string>
    <string name="roboroRegular">Roboto-Regular.ttf</string>
    <string name="bebas">bebas_neue.ttf</string>
    <string name="robotoLight">Roboto-Light.ttf</string>

    <!--Splash-->
    <string name="nowYouKnow">Now you always know who\'s \ncalling - no more unwanted \ncalls and spam</string>
    <string name="letsGo">LET\`S GO</string>
    <string name="conditions">By pressing "Let\'s go", you agree to the <u> terms of use </u></string>

    <!--tutorial-->
    <string name="caller">Caller ID</string>
    <string name="tutorial1">With each call you\`ll see personal card of caller.</string>
    <string name="tutorial1_number">1/2</string>
    <string name="userStatus">User stauses</string>
    <string name="tutorial2_a">Now you know when \nuser</string>
    <string name="tutorial2_b"> available</string>
    <string name="tutorial2_c">,</string>
    <string name="tutorial2_d">\nspeaking</string>
    <string name="tutorial2_e"> or his phone in</string>
    <string name="tutorial2_f"> silent mode</string>
    <string name="tutorial2_g">.</string>
    <string name="tutorial2_number">2/2</string>
    <string name="smartJournal">Smart call log</string>
    <string name="tutorial3">Look at the photo of unknown callers You may know them!</string>
    <string name="tutorial3_number">3/3</string>
    <string name="next">NEXT</string>
    <string name="ready">GET STARTED!</string>
    <string name="nameExample">John Deer</string>
    <string name="phoneExample">050 123 45 67 - Ukraine</string>
    <string name="tagExample">Legal services</string>


    <!--DateConverter-->
    <string name="min.">min.</string>
    <string name="h.">h.</string>
    <string name="yesturday">Yesterday</string>
    <string name="twodayssago">2 days ago</string>

    <!--MainScreen-->
    <string name="calls">CALLS</string>
    <string name="spam">SPAM</string>
    <string name="find">Search</string>
    <string name="home">home</string>
    <string name="mobile">mobile</string>
    <string name="work">work</string>
    <string name="other">other</string>
    <string name="spammersListisEMpty">Spammers list is empty</string>

    <string name="contacts">Contacts</string>
    <string name="favorites">Favourites</string>
    <string name="arrow">←</string>
    <string name="allowCalls">Please, give the permission to view the call log</string>
    <string name="allowContacts">Please, give the permission to view the contacts list</string>
    <string name="givePermission">Give permission</string>

    <!--sidebar-->
    <string name="buypro">Buy Pro-account</string>
    <string name="help">Help</string>
    <string name="invite">Invite friends</string>
    <string name="settings">Settings</string>
    <string name="sendemail">Send message</string>
    <string name="rateapp">Rate the app</string>
    <string name="shareText">New caller id app for Android with the ability to block spammers! \n</string>
    <string name="youhaveNoGmail">Gmail app not found</string>

    <!--saerch screen-->
    <string name="search">Enter a name or number with the operator code</string>
    <string name="numbersInBase">numbers in the database</string>
    <string name="firndNothind">Nothing was found</string>
    <string name="inputTheRightNumber">Input number with the operator code</string>
    <string name="lastResults">LAST SEARCH RESULTS</string>
    <string name="deleteLastResultsAlert">Delete the latest results?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <!--User Profile screen-->
    <string name="callStory">Call history</string>
    <string name="saveConatcs">Save to contacts</string>
    <string name="changeContact">Change contact</string>
    <string name="block">Block</string>
    <string name="removeFromBlackList">Unblock</string>
    <string name="listIsEmpty">List is empty</string>
    <string name="userAddedToBlackList">User was blocked!</string>
    <string name="userRemovedFromBlackList">User was unblocked</string>
    <string name="contactAddedToStarred">Contact was added to favourites</string>
    <string name="contactRemovedFromStarred">Contact was removed from favourites</string>

    <!--Dialog activity -->
    <string name="call">CALL</string>
    <string name="save">SAVE</string>
    <string name="block_caps">BLOCK</string>
    <string name="unknown_user">Unknown number</string>
    <string name="unblock">UNBLOCK</string>

    <!--Spam screen-->
    <string name="myBlackList">My black list</string>
    <string name="spammers">Major spammers</string>
    <string name="userInBlackList">Number is in your black list</string>
    <string name="usersCheckNumberAsSpam">users was added this number to black list</string>

    <!--Login -->

    <string name="smsconfirm1">On number</string>
    <string name="smsconfirm2">was sent \nverefication code</string>
    <string name="smsNotReceived">SMS does not come?</string>
    <string name="dispatch">Dispatch...</string>
    <string name="confirm">CONFIRM</string>
    <string name="welcome">Welcome!\nPlease, fill your user profile :</string>
    <string name="firstname">Name</string>
    <string name="firstname_example">John</string>
    <string name="surname">Surname</string>
    <string name="surname_example">Deer</string>
    <string name="email">E-mail</string>
    <string name="email_example">johnny@apple.com</string>
    <string name="begin">START TO USE</string>
    <string name="wrongSms">Wrong verification code!</string>
    <string name="pleaseInputName">Please, input your name and surname</string>
    <string name="takePhoto">Take a photo</string>
    <string name="takeFromGallery">Choose from gallery</string>
    <string name="enter">Enter...</string>
    <string name="checkSms">Check...</string>
    <string name="pleaseInputSMS">Please, input verification code</string>
    <string name="loadingData">Loading...</string>
    <string name="profile">Profile</string>
    <string name="changePhoto">Change photo</string>
    <string name="exit">EXIT</string>
    <string name="wrongNumber">Number should be with the country code</string>
    <string name="joinWhoIsWho">Join Nomer to search database of more than</string>
    <string name="numbers">numbers</string>
    <string name="wrongEmail">Wrong email format</string>


    <!--countries-->
    <string-array name="countryList">
        <item>Ukraine</item>
        <item>Czech Republic</item>
    </string-array>

</resources>
