<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/splashContainer"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/primary_color_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="100sp"
            android:gravity="center"
            android:tag="@string/bebas"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nowYouKnow"
            android:textColor="@color/splashTextColor"
            android:textSize="18sp"
            android:gravity="center"
            android:tag="@string/roboroRegular"
            android:layout_marginTop="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true" >

        <TextView
            android:id="@+id/letsGoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/letsGo"
            android:background="@color/splashButtonColor"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:tag="@string/robotoMedium"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="15dp" />

        <TextView
            android:id="@+id/conditionsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/conditions"
            android:textColor="@color/splashTextColor"
            android:textSize="12sp"
            android:gravity="center"
            android:tag="@string/roboroRegular"
            android:layout_marginBottom="20dp" />

    </LinearLayout>






</RelativeLayout>