<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.whois.whoiswho.view.CustomViewPager
        android:id="@+id/tutorialViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

    </com.whois.whoiswho.view.CustomViewPager>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:background="@android:color/white"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/positionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tutorial1_number"
            android:textColor="@color/greytext"
            android:tag="@string/roboroRegular"
            android:paddingLeft="20dp"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/nextTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textColor="@color/nextColor"
            android:tag="@string/robotoMedium"
            android:background="?android:attr/selectableItemBackground"
            android:padding="10dp"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true" />

    </RelativeLayout>


</LinearLayout>