<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:windowBackground="@android:color/transparent"
        android:windowIsTranslucent="true"
        android:background="@drawable/tutorial_screen_gradient"
        android:windowAnimationStyle="@android:style/Animation.Translucent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/user_status"
            android:layout_centerInParent="true" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/userStatus"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:tag="@string/robotoMedium"/>

        <TextView
            android:id="@+id/tutorial2TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tutorial2_a"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:tag="@string/roboroRegular"
            android:layout_marginTop="10dp" />


    </LinearLayout>

</LinearLayout>