<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login_blur">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logoText"
                android:tag="futura.ttf"
                android:textSize="34sp"
                android:gravity="center"
                android:textColor="#3d3737"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/logoTopMargin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/logo"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/conditionsTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:tag="@string/roboroRegular"
                    android:layout_marginBottom="@dimen/loginBottomMargin" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/avatarImageView"
                    android:layout_width="@dimen/imageViewSize"
                    android:layout_height="@dimen/imageViewSize"
                    android:src="@drawable/camera"
                    android:layout_centerInParent="true"
                    android:background="@drawable/shape_background"
                    app:civ_border_color="#FF000000"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/loginBottomMargin" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@android:color/white">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/firstname"
                        android:textColor="@android:color/black"
                        android:layout_weight="2"
                        android:textSize="@dimen/loginTextSize"
                        android:padding="15dp"/>

                    <EditText
                        android:id="@+id/firstnameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/firstname_example"
                        android:layout_weight="1"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords|text"
                        android:background="@android:color/transparent"
                        android:textSize="@dimen/loginTextSize"
                        android:padding="15dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@android:color/white">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/surname"
                        android:textColor="@android:color/black"
                        android:layout_weight="2"
                        android:textSize="@dimen/loginTextSize"
                        android:padding="15dp"/>

                    <EditText
                        android:id="@+id/surnameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/surname_example"
                        android:layout_weight="1"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords|text"
                        android:background="@android:color/transparent"
                        android:textSize="@dimen/loginTextSize"
                        android:padding="15dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@android:color/white">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/email"
                        android:textColor="@android:color/black"
                        android:layout_weight="2"
                        android:textSize="@dimen/loginTextSize"
                        android:padding="15dp"/>

                    <EditText
                        android:id="@+id/emailEditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/email_example"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:textSize="@dimen/loginTextSize"
                        android:imeOptions="actionDone"
                        android:inputType="textEmailAddress"
                        android:padding="15dp"/>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/primary_color_gradient"
                    android:focusable="true"
                    android:focusableInTouchMode="true">

                    <TextView
                        android:id="@+id/okButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/begin"
                        android:background="?android:attr/selectableItemBackground"
                        android:textColor="@android:color/white"
                        android:gravity="center"
                        android:tag="@string/robotoMedium"
                        android:textSize="16sp"
                        android:focusable="true"
                        android:padding="15dp" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>