<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login_blur">

    <TextView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logoText"
        android:tag="futura.ttf"
        android:textSize="34sp"
        android:gravity="center"
        android:textColor="#3d3737"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/logoTopMargin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/logoImageView">

        <TextView
            android:id="@+id/smsNumberTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/smsconfirm1"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:gravity="center"
            android:tag="@string/roboroRegular"
            android:layout_marginBottom="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/sms1EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:tag="@string/robotoMedium"
                android:textSize="22sp"
                android:maxLength="1"
                android:padding="15dp"
                android:inputType="number"
                android:layout_weight="1"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:imeOptions="actionNext"/>



            <EditText
                android:id="@+id/sms2EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:tag="@string/robotoMedium"
                android:textSize="22sp"
                android:maxLength="1"
                android:padding="15dp"
                android:inputType="number"
                android:layout_weight="1"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:imeOptions="actionNext"/>

            <EditText
                android:id="@+id/sms3EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:tag="@string/robotoMedium"
                android:textSize="22sp"
                android:maxLength="1"
                android:padding="15dp"
                android:inputType="number"
                android:layout_weight="1"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:imeOptions="actionNext"/>

            <EditText
                android:id="@+id/sms4EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:tag="@string/robotoMedium"
                android:textSize="22sp"
                android:maxLength="1"
                android:padding="15dp"
                android:inputType="number"
                android:layout_weight="1"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:imeOptions="actionDone"/>

        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/primary_color_gradient"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/okButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:background="?android:attr/selectableItemBackground"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:tag="@string/robotoMedium"
                android:textSize="16sp"
                android:focusable="true"
                android:padding="15dp" />

        </LinearLayout>


        <TextView
            android:id="@+id/smsNotReceivedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smsNotReceived"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:gravity="center"
            android:tag="@string/roboroRegular"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:padding="10dp" />



    </LinearLayout>


</RelativeLayout>